# chatterbox

./: Cargo.toml  Readme.md  docker-compose.yaml
.github/workflows/: rust.yml
src/: message.rs
src/dispatcher/: discord.rs  email.rs  gotify.rs  mod.rs  slack.rs  telegram.rs
