 [package]
name = "chatterbox"
version = "1.0.0"
edition = "2021"
description = "streamlined text notifications via telegram, email and slack"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio = {version = "1.21.2", features=["full"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
lettre = "0.10.0-beta.2"
slack-hook = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0"
lazy_static = "1.4.0"
thiserror = "1.0.40"
validator = { version="0.16.0", features = ["derive"] }

[dev-dependencies]
needs_env_var = "2.0.1"
