 [package]
name = "chatterbox"
version = "2.0.0"
edition = "2021"
description = "streamlined text notifications via telegram, email and slack"
license = "MIT"
repository = "https://github.com/HerrMuellerluedenscheid/chatterbox.git"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.21.2", features=["full"]}
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] , default-features = false}
lettre = { version = "0.11", features = ["rustls-tls", "smtp-transport", "builder"], default-features = false }
slack-hook = { version = "0.9", default-features = false, features = ["rustls-tls"] }
log = "0.4"
thiserror = "2"
validator = { version="0.20", features = ["derive"] }

[dev-dependencies]
needs_env_var = "2.0.1"
